# QQMusic2BiliFav

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml
source/: __init__.py  config.py  engine.py  interfaces.py  models.py
source/providers/: qq_music.py
